# ultrawave

./: .gitignore  CONTRIBUTING.md  Cargo.toml  ERRORS.md  LICENSE  README.md  technical_specs.md
.beads/: daemon-error  issues.jsonl
.claude/: settings.local.json
.github/workflows/: build.yml  plugin-validation.yml  release.yml
docs/design/: agent-dev-container.md
docs/testing/: plugin-validation.md  troubleshooting.md
scripts/: TESTING.md  VALIDATION_BASELINE.md  screenshot.ps1  screenshot_standalone.ps1  test.ps1  validate-clap.ps1  validate-clap.sh  validate-vst3.ps1  validate-vst3.sh
src/: editor.rs  lib.rs  main.rs  params.rs  theme.css
src/dsp/: effects.rs  filter.rs  mod.rs  sample_engine.rs
src/machines/: mod.rs  ram_play.rs  ram_record.rs  shared.rs
src/standalone/: mod.rs  play.rs  play_editor.rs  record.rs  record_editor.rs
tests/: integration.rs
xtask/src/: main.rs
